manifests/access/bookwarehouse-access.yaml
apiVersion: specs.smi-spec.io/v1alpha4
kind: TCPRoute
metadata:
  name: tcp-route
  namespace: bookwarehouse
spec:
  matches:
    ports:
    - 3306
---
apiVersion: specs.smi-spec.io/v1alpha4
kind: TCPRoute
metadata:
  name: bookwarehouse-service-route
  namespace: bookwarehouse
spec:
  matches:
    ports:
    - 14001
