manifests/access/marblerun-access.yaml
apiVersion: specs.smi-spec.io/v1alpha4
kind: TCPRoute
metadata:
  name: marble-activation
  namespace: marblerun
spec:
  matches:
    ports: []
