manifests/access/traffic-access-v1.yaml
apiVersion: specs.smi-spec.io/v1alpha4
kind: TCPRoute
metadata:
  name: bookstore-service-routes
  namespace: bookstore
spec:
  matches:
    ports: []
